modified:   package-lock.json 	modified:   package.json 	new file:   postcss.config.js 	new file:   public/assets/imgs/logoIcon.png 	new file:   public/assets/imgs/worktogether.svg 	new file:   public/assets/svg/arrowright.svg 	new file:   public/assets/svg/blueslash.svg 	new file:   public/assets/svg/contourmobile.svg 	new file:   public/assets/svg/wavemobile.svg 	new file:   public/assets/svg/wavetablet.svg 	new file:   public/assets/svg/waveweb.svg 	new file:   public/assets/svg/wavewebbig.svg 	new file:   public/assets/svg/wavewebsmall.svg 	new file:   public/assets/svg/yellowslash.svg 	modified:   src/App.css 	modified:   src/App.tsx 	new file:   src/components/Button.tsx 	new file:   src/components/CompanyLogo.tsx 	new file:   src/components/HamburgerIcon2.tsx 	new file:   src/components/Img.tsx 	new file:   src/components/MobileNav.tsx 	new file:   src/components/Nav.tsx 	new file:   src/components/Span.tsx 	modified:   src/index.css 	new file:   src/layout/Customize.tsx 	new file:   src/layout/Extension.tsx 	new file:   src/layout/Header.tsx 	new file:   src/layout/Hero.tsx 	new file:   src/layout/ProjectManage.tsx 	new file:   src/layout/Work.tsx 	deleted:    src/logo.svg 	new file:   tailwind.config.js

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+/* Base styles for mobile (320px and up) */
+/* These styles apply by default, so no media query is needed */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+body {
+  font-family: 'Roboto', serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@media (min-width: 320px) {
+  .default-margin {
+    margin: 0 16px 0 16px;
+  }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .default-flex {
+    flex-direction: column;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width: 768px) {
+  .default-margin {
+    margin: 0 20px 0 20px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (min-width: 1152px) {
+  .default-margin {
+    margin: 0 32px 0 32px;
+  }
+
+  .nav-toggle {
+    display: none;
+  }
+
+  .mobile-nav {
+    display: none;
+  }
+
+  .web-nav {
+    display: flex;
+  }
+}
+
+@media (min-width: 1440px) {
+  /* .mobile-nav {
+    display: none;
+  }
+  .nav-toggle {
+    display: none;
+  }
+  .web-nav {
+    display: flex;
+  } */
+}
+
+@media (min-width: 1920px) {
+  .default-margin {
+    margin: 0 220px 0 220px;
   }
 }
